--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -10,7 +10,14 @@
                 <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
                 
             </li>
-            
+
+            <li ng-class="{active: currentUrl()=='/dashboard/monitor'}">
+
+                <a ui-sref="dashboard.monitor"><i class="fa fa-cogs fa-fw"></i> Monitor<span></span></a>
+
+            </li>
+
+
             <li ng-class="{active:currentUrl()=='/dashboard/tables'}">
                 <a ui-sref="dashboard.table"><i class="fa fa-table fa-fw"></i> Tables</a>
             </li>
