ngRadialGauge in with error

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,9 @@
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/metisMenu/dist/metisMenu.min.js"></script>
+    <script src="bower_components/d3/d3.min.js"></script>
+    <script src="bower_components/ngRadialGauge/src/d3-serv.js"></script>
+    <script src="bower_components/ngRadialGauge/src/ng-radial-gauge-dir.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
