--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,11 @@
     <script src="bower_components/d3/d3.min.js"></script>
     <!--<script src="bower_components/ngRadialGauge/src/d3-serv.js"></script>-->
     <script src="bower_components/ngRadialGauge/src/ng-radial-gauge-dir.js"></script>
+
+    <script src="bower_components/Chart.js/Chart.js"></script>
+    <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+
+
     <!-- endbower -->
     <!-- endbuild -->
     
