--- a/app/scripts/directives/sidebar/sidebar.html
+++ b/app/scripts/directives/sidebar/sidebar.html
@@ -17,6 +17,12 @@
 
             </li>
 
+            <li ng-class="{active: currentUrl()=='/dashboard/redis'}">
+
+                <a ui-sref="dashboard.redis"><i class="fa fa-database fa-fw"></i> Redis<span></span></a>
+
+            </li>
+
 
             <li ng-class="{active:currentUrl()=='/dashboard/tables'}">
                 <a ui-sref="dashboard.table"><i class="fa fa-table fa-fw"></i> Tables</a>
