--- a/app/scripts/directives/dashboard/stats/stats.html
+++ b/app/scripts/directives/dashboard/stats/stats.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="col-xs-9 text-right">
                     <div class="huge">{{number}}</div>
-                    <div>{{comments}}</div>
+                    <div class="huge">{{comments}}</div>
                 </div>
             </div>
         </div>
